error.txt
  File "<stdin>", line 2
    import sys
    ^
IndentationError: unexpected indent
  File "<stdin>", line 2
    import sys
    ^
IndentationError: unexpected indent
  File "<stdin>", line 2
    import sys
    ^
IndentationError: unexpected indent
